--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.13.1",
+    "@slack/web-api": "^6.8.1",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "openai": "^3.2.1"
   },
