--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [18.x, 20.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -22,13 +22,24 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'
     
     - name: Install dependencies
       run: npm ci
     
     - name: Type check
       run: npm run type-check || npm run tsc
+      
+    - name: Install ESLint and its dependencies
+      run: |
+        npm install --save-dev eslint @typescript-eslint/parser @typescript-eslint/eslint-plugin
+        
+    - name: Run ESLint
+      run: npm run lint || npx eslint . --ext .ts
     
+    - name: Install test dependencies
+      run: npm install --save-dev jest @types/jest ts-jest
+      
     - name: Run tests
       run: npm test || echo "No tests found"
     
