--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -18,12 +18,18 @@ jobs:
       with:
         node-version: '20.x'
         cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'
     
     - name: Install dependencies
       run: npm ci
+      
+    - name: Install ESLint and Prettier
+      run: |
+        npm install --save-dev eslint @typescript-eslint/parser @typescript-eslint/eslint-plugin
+        npm install --save-dev prettier
     
     - name: Run ESLint
-      run: npm run lint || npm run eslint .
+      run: npm run lint || npx eslint . --ext .ts
     
     - name: Run Prettier check
       run: npm run format:check || npx prettier --check "src/**/*.{ts,js,json,md}"
